fix: macOS build failing

--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -225,8 +225,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm ci
+          npm ci --include=optional
           npm install --force @rollup/rollup-darwin-arm64
+          npm install --no-save @swc/core-darwin-x64 @swc/core-darwin-arm64
 
       - name: Check for Code Signing Certificates
         id: check_certs
