--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -227,7 +227,7 @@ jobs:
           rm -f package-lock.json
           npm install
           npm install --force @rollup/rollup-darwin-arm64
-          npm install --force @swc/core-darwin-arm64
+          npm rebuild
 
       - name: Check for Code Signing Certificates
         id: check_certs
