--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -221,16 +221,22 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "npm"
 
       - name: Install dependencies
-        run: npm ci
-
-      - name: Install macOS-specific build dependencies
         run: |
+          rm -rf node_modules package-lock.json
+          npm install
           npm install --force @rollup/rollup-darwin-arm64
-          npm uninstall @swc/core
-          npm install @swc/core --include=optional
+
+      - name: Verify @swc/core installation
+        run: |
+          echo "Checking @swc/core installation..."
+          ls -la node_modules/@swc/core/ || echo "@swc/core not found"
+          ls -la node_modules/@swc/ || echo "@swc directory not found"
+          echo "Node version: $(node --version)"
+          echo "Platform: $(uname -m)"
+          echo "Installed @swc packages:"
+          npm list @swc/core @swc/core-darwin-arm64 @swc/core-darwin-x64 || true
 
       - name: Check for Code Signing Certificates
         id: check_certs
