--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -146,6 +146,31 @@ jobs:
       - name: Build Linux (All Architectures)
         run: npm run build && npx electron-builder --linux --x64 --arm64 --armv7l
 
+      - name: Rename tar.gz files to match convention
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          cd release
+
+          # Rename x64 tar.gz if it exists
+          if [ -f "termix-${VERSION}-x64.tar.gz" ]; then
+            mv "termix-${VERSION}-x64.tar.gz" "termix_linux_x64_${VERSION}_portable.tar.gz"
+            echo "Renamed x64 tar.gz"
+          fi
+
+          # Rename arm64 tar.gz if it exists
+          if [ -f "termix-${VERSION}-arm64.tar.gz" ]; then
+            mv "termix-${VERSION}-arm64.tar.gz" "termix_linux_arm64_${VERSION}_portable.tar.gz"
+            echo "Renamed arm64 tar.gz"
+          fi
+
+          # Rename armv7l tar.gz if it exists
+          if [ -f "termix-${VERSION}-armv7l.tar.gz" ]; then
+            mv "termix-${VERSION}-armv7l.tar.gz" "termix_linux_armv7l_${VERSION}_portable.tar.gz"
+            echo "Renamed armv7l tar.gz"
+          fi
+
+          cd ..
+
       - name: List release files
         run: |
           echo "Contents of release directory:"
